2007-06-29  Wolfgang Sourdeau  <wsourdeau@inverse.ca>

	* SoObjects/SOGo/SOGoUserFolder.m ([SOGoUserFolder
	-folderIsMandatory]): returns NO unconditionnally.

	* SoObjects/Contacts/SOGoContactFolders.m ([SOGoContactFolders
	-appendPersonalSources]): add the "personal" folder to the list of
	user folders even if it doesn't exist, so that it is created when
	the user accesses it.

	* SoObjects/Contacts/SOGoContactGCSFolder.m ([SOGoContactGCSFolder
	-folderIsMandatory]): returns YES if nameInContainer is set to
	"personal", which is the default address book.

	* SoObjects/Appointments/SOGoAppointmentFolder.m
	([SOGoAppointmentFolder -folderIsMandatory]): returns YES since
	users must have one Calendar folder (one and only one).
	([SOGoAppointmentFolder -_privacySqlString]): unescape the
	escaping '\' so make the carriage return a real one. This way,
	PgSQL 8 won't complain about escaping the string.

	* SoObjects/SOGo/SOGoFolder.m ([SOGoFolder -ocsFolder]): new
	method that create the folder if considered mandatory.
	([SOGoFolder -folderIsMandatory]): new method that determines
	whether the folder should be created automatically or not. To be
	overriden by subclasses.

	* Main/SOGo.m ([SOGo -run]): override method and create the
	missing system tables if needed.

2007-06-28  Wolfgang Sourdeau  <wsourdeau@inverse.ca>

	* UI/MailerUI/WOContext+UIxMailer.m ([WOContext
	-mailDateFormatter]): returns the user's date formatter.

	* SoObjects/Mailer/SOGoMailObject.m ([SOGoMailObject -date]):
	applies the user timezone to the date object before returning it.

	* UI/Common/UIxSortButton.m: removed useless class module.

	* UI/Common/UIxSortableTableHeader.m: removed useless class
	module.

	* UI/Contacts/UIxContactsListView.m ([UIxContactsListView
	-contactInfos]): use the "asc" url parameter instead of "desc" to
	determine the ordering.
	([-sortOrdering]): removed method.
	([UIxContactsListView -init]): removed the "searchText" ivar.